Changed GetTopmostMsgWindow, added pointer checks after the dom function calls, bug 144735, r=ducarroz, sr=bienvenu.